fixed floats and added background to sections to improve visibility

--- a/assignment1/css/stylesheet.css
+++ b/assignment1/css/stylesheet.css
@@ -1,6 +1,22 @@
 
 /* target mobile by default */
 
+section {
+    box-sizing: border-box;
+    padding: 10px
+}
+
+#section1 {
+    background-color: red;
+}
+
+#section2 {
+    background-color: orange;
+}
+
+#section3 {
+    background-color: yellow;
+}
 
 /* tablet specific settings */
 
@@ -8,12 +24,16 @@
     
     #section1 {
         width: 50%;
-        float: right;
+        float: left;
     }
     #section2 {
         width: 50%;
-        float: right;
-    } 
+        float: left;
+    }
+    #section3 {
+        width: 100%;
+        clear: both;
+    }
 }
 
 
@@ -23,15 +43,15 @@
 
     #section1 {
         width: 33.3%;
-        float: right;
+        float: left;
     }
     #section2 {
         width: 33.3%;
-        float: right;
+        float: left;
     }
     #section3 {
         width: 33.3%;
-        float: right;
+        float: left;
     }
 }
 
